change logic for several function